@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+    - documentation fix: misspelled plugin name in [NoTabsTests]
 
 0.04      2013-09-25 15:33:24Z (Karen Etheridge)
     - fix broken test caused by running an autogenerated test in situ and
